Move swisshash benchmarks to libs:swisshash